2024-01-14T08:17:48Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7517961189 # 22
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-14
* notice: last 14d: unq all: 5 15
* notice: prev accum: outdated-unq outdated-all / unq all: 725 1145 / 734 1159
* notice: next accum: outdated-unq outdated-all / unq all: 725 1145 / 735 1160
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-01-14]

2024-01-12T16:19:42Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7504710931 # 17
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-12
* notice: last 14d: unq all: 4 14
* notice: prev accum: outdated-unq outdated-all / unq all: 725 1145 / 733 1158
* notice: next accum: outdated-unq outdated-all / unq all: 725 1145 / 734 1159
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +2 +2 -0 -0 / 2 2
* notice: removed / changed dates: [] / [2024-01-12]

2024-01-12T08:19:40Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7499604881 # 16
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-12
* notice: last 14d: unq all: 3 13
* notice: prev accum: outdated-unq outdated-all / unq all: 724 1143 / 732 1157
* notice: next accum: outdated-unq outdated-all / unq all: 725 1145 / 733 1158
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2023-12-29] / [2024-01-12]

2024-01-11T16:20:06Z: