@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-01-14T08:17:48Z",
-  "count_outdated" : 1145,
-  "uniques_outdated" : 725,
+  "timestamp" : "2024-01-15T08:20:21Z",
+  "count_outdated" : 1147,
+  "uniques_outdated" : 726,
   "count" : 1160,
   "uniques" : 735,
   "clones" : [
-    {
-      "timestamp": "2024-01-01T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
-      "count_decinc": [ 0, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2024-01-07T00:00:00Z",
       "count": 1,
