@@ -1,12 +1,7 @@
 {
-  "count": 15,
-  "uniques": 5,
+  "count": 13,
+  "uniques": 4,
   "clones": [
-    {
-      "timestamp": "2024-01-01T00:00:00Z",
-      "count": 2,
-      "uniques": 1
-    },
     {
       "timestamp": "2024-01-07T00:00:00Z",
       "count": 1,
