@@ -1,3 +1,12 @@
+2024-01-15T08:20:21Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7526108468 # 25
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-15
+* notice: last 14d: unq all: 4 13
+* notice: prev accum: outdated-unq outdated-all / unq all: 725 1145 / 735 1160
+* notice: next accum: outdated-unq outdated-all / unq all: 726 1147 / 735 1160
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2024-01-01] / []
+
 2024-01-14T08:17:48Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7517961189 # 22
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-14
